# ncurses_snake

./: CMakeLists.txt  CMakeLists2.txt  README.md
Include/: board.hpp  coord.hpp  game.hpp  snake.hpp
Source/: CMakeLists.txt  board.cpp  coord.cpp  game.cpp  main.cpp  snake.cpp
